商品路由组件

--- a/src/common/stylus/minxin.styl
+++ b/src/common/stylus/minxin.styl
@@ -25,3 +25,7 @@ one-px($color)
       transform scaleY(.5)
     @media screen and (-webkit-device-pixel-ratio:3)
       transform scaleY(.3333333)
+border-none()
+  &:after
+    display none
+    content ""
